--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
   <meta name="author" content="Alexandra Diaz">
   <meta name="copyright" content="ADCreativ">
   
-  <link rel="icon" type="image/x-icon" href="favicon.jpg">
+  <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico">
 </head>
 <body>
   <app-root></app-root>
